# cpp-training-boilerplate

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: spdlog.cmake
examples/example1/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/boilerplate/: CMakeLists.txt  boilerplate.cpp  boilerplate.hpp  boilerplate_test.cpp
tests/integration/: CMakeLists.txt  integration_test.cpp
